@@ -23,6 +23,7 @@
 	- permit Conflicts: /path/to/file.
 	- free rpmrc when looping on --target arches (#127730).
 	- port to internal file-4.10 libmagic rather than libfmagic.
+	- fix: handle non-unique dirnames in rpmalAdd().
 
 4.3.1 -> 4.3.2:
 	- use /etc/selinux/targeted/contexts/files/file_contexts for now.
